--- a/Arturo/Mean-Tests/FrontEnd/src/app/app.component.html
+++ b/Arturo/Mean-Tests/FrontEnd/src/app/app.component.html
@@ -1,2 +1,39 @@
+<nav class="white" role="navigation">
+    <div class="nav-wrapper container">
+      <a id="logo-container" href="#" class="brand-logo blue-text accent-1">Consultoria</a>
+      <ul class="right hide-on-med-and-down">
+        <li><a href="#" class= "blue-text accent-1">Navegador</a></li>
+      </ul>
+
+      <ul id="nav-mobile" class="sidenav">
+        <li><a href="#" class= "blue-text accent-1">Navegador</a></li>
+      </ul>
+      <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+    </div>
+  </nav>
+
+  <div id="index-banner" class="parallax-container">
+    <div class="section no-pad-bot">
+      <div class="container">
+        <br><br>
+        <h1 class="header center light-blue-text text-darken-4">Consultoria</h1>
+        <div class="row center">
+          <h5 class="header col s12 light">Hagamos algo que dure.</h5>
+        </div>
+        <div class="row center">
+          <a href="http://materializecss.com/getting-started.html" id="download-button" class="btn-large waves-effect waves-light blue accent-1">Comencemos</a>
+          <img [alt]="background1" src="./assets/img/background1.jpg'">
+        </div>
+        <br><br>
+
+      </div>
+    </div>
+    <div class="parallax"><img src="assets/img/background1.jpg" alt="image" ></div>
+  </div>
+  <div class="container">
+    <div class="section">
+
+
+
 <app-tests></app-tests>
 
