--- a/Arturo/Mean-Tests/FrontEnd/src/app/app.component.html
+++ b/Arturo/Mean-Tests/FrontEnd/src/app/app.component.html
@@ -1,4 +1,4 @@
-<nav class="white" role="navigation">
+<nav class="white">
     <div class="nav-wrapper container">
       <a id="logo-container" href="#" class="brand-logo blue-text accent-1">Consultoria</a>
       <ul class="right hide-on-med-and-down">
@@ -12,23 +12,22 @@
     </div>
   </nav>
 
-  <div id="index-banner" class="parallax-container">
+  <div id="index-banner" class="parallax-container customBg">
     <div class="section no-pad-bot">
       <div class="container">
         <br><br>
-        <h1 class="header center light-blue-text text-darken-4">Consultoria</h1>
+        <h1 class="header center light-blue-text text-lighten-3">DIAGNÓSTICO Y REHABILITACIÓN PSICOPEDAGÓGICA  </h1>
         <div class="row center">
-          <h5 class="header col s12 light">Hagamos algo que dure.</h5>
+          <h5 class="header col s12 grey-text text-lighten-5">Hagamos algo que dure.</h5>
         </div>
         <div class="row center">
-          <a href="http://materializecss.com/getting-started.html" id="download-button" class="btn-large waves-effect waves-light blue accent-1">Comencemos</a>
-          <img [alt]="background1" src="./assets/img/background1.jpg'">
+          <a href="http://materializecss.com/getting-started.html" id="download-button" class="btn-large waves-effect waves-light brown darken-1">Comencemos</a>
         </div>
         <br><br>
 
       </div>
     </div>
-    <div class="parallax"><img src="assets/img/background1.jpg" alt="image" ></div>
+     <!-- <div><img src="" alt="image" ></div> -->
   </div>
   <div class="container">
     <div class="section">
