--- a/Arturo/Mean-Tests/FrontEnd/src/app/components/tests/tests.component.html
+++ b/Arturo/Mean-Tests/FrontEnd/src/app/components/tests/tests.component.html
@@ -1,6 +1,6 @@
-<div class="CONTAINER">
+<div class="CONTAINER customBg-Test">
   <div class="row">
-    <div class="col s5">
+    <div class="col s12">
       <div class="card">
         <div class="card-content">
           <form #testForm="ngForm" (ngSubmit)="addTest(testForm)">
@@ -23,7 +23,7 @@
         </div>
       </div>
     </div>
-    <div class="col s7">
+    <div class="col s12">
       <table>
         <thead>
           <th>Name</th>
